--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,25 @@
-.col {
-  background-color: #ccc;
-  border: 3px dashed black;
+.container-fluid {
+  height: 100vh;
+  width: 100%;
+}
+
+.landing-1 {
+  background: linear-gradient(rgba(0, 0, 0, 0.55), rgba(53, 53, 53, 0.55)),
+    url('https://images.unsplash.com/photo-1543633550-f431af584afd?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80');
+}
+.jumbotron {
+  height: 50vh;
+  margin-top: 22vh;
+  color: #ccc;
+  background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8));
+}
+
+.jumbotron > .btn-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+}
+
+.btn-container > .btn {
+  margin: 0 0.4rem;
 }
